# django-spellbook

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.dbml
dnd_site/: asgi.py  settings.py  urls.py  wsgi.py
spells/: admin.py  models.py  urls.py
spells/models/: __init__.py  characters.py  enums.py  export_models.py  spellbooks.py  spells.py  users.py
spells/views/: material_component.py
